Update AUTHORS to match README

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,12 +3,14 @@ This software was mostly written by:
 Mathias Schäfer    (9elements)    @molily   http://molily.de/
 Johannes Emerich   (Moviepilot)   @knuton   http://johannes.emerich.de/
 
-With major input and contributions from:
+With input and contributions from:
 
 Nico Hagenburger                  @hagenburger  http://www.hagenburger.net/
 Rin Räuber         (9elements)    @rinpaku      http://rin-raeuber.com/
 Wojtek Gorecki     (9elements)    @newmetl
 Jan Monschke       (9elements)    @thedeftone
+Jan Varwig         (9elements)    @agento       http://jan.varwig.org/
+Luis Merino        (Moviepilot)   @rendez
 
 The architecture was derived from http://moviepilot.com/,
 a project by Moviepilot with support from 9elements.
