--- a/AUTHORS
+++ b/AUTHORS
@@ -1,15 +1,16 @@
 This software was mostly written by:
 
-Mathias Schäfer    (9elements)    @molily   http://molily.de/
-Johannes Emerich   (Moviepilot)   @knuton   http://johannes.emerich.de/
+Mathias Schäfer    (9elements)    @molily         http://molily.de/
+Johannes Emerich   (Moviepilot)   @knuton         http://johannes.emerich.de/
 
 With input and contributions from:
 
-Nico Hagenburger                  @hagenburger  http://www.hagenburger.net/
-Rin Räuber         (9elements)    @rinpaku      http://rin-raeuber.com/
+Nico Hagenburger                  @hagenburger    http://www.hagenburger.net/
+Rin Räuber         (9elements)    @rinpaku        http://rin-raeuber.com/
 Wojtek Gorecki     (9elements)    @newmetl
 Jan Monschke       (9elements)    @thedeftone
-Jan Varwig         (9elements)    @agento       http://jan.varwig.org/
+Jan Varwig         (9elements)    @agento         http://jan.varwig.org/
+Patrick Schneider  (9elements)    @padschneider   http://padschneider.com/
 Luis Merino        (Moviepilot)   @rendez
 
 The architecture was derived from http://moviepilot.com/,
